[gd_scene load_steps=4 format=3 uid="uid://xhycsisw5l3"]

[ext_resource type="Script" uid="uid://cae7ybvcvv1pk" path="res://game/screens/notice.gd" id="1_iwhi4"]
[ext_resource type="Theme" uid="uid://drk5fhsdjoewf" path="res://game/visuals/theme/diisis_theme.tres" id="2_i7bak"]
[ext_resource type="StyleBox" uid="uid://dadnwlbrdktog" path="res://game/visuals/theme/background_panel.tres" id="3_8ja3y"]

[node name="Notice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwhi4")

[node name="PanelContainer" type="PanelContainer" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_i7bak")
theme_override_styles/panel = ExtResource("3_8ja3y")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Notice"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
bbcode_enabled = true
text = "awawa"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "close"

[node name="QuitContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="QuitButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/QuitContainer"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "quit game"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/QuitContainer/QuitButton" to="." method="_on_quit_button_pressed"]
